// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination render on mobile resolution should render component with left and right hidden buttons 1`] = `
<Pagination
  activePage={5}
  onChange={[MockFunction]}
  totalPages={10}
>
  <div
    className="mfui-beta-pagination"
  >
    <PaginationNavigation
      className="mfui-beta-pagination__button"
      direction="left"
      disabled={false}
      onClick={[Function]}
      theme="default"
    >
      <PaginationButton
        className="mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_left mfui-beta-pagination__button"
        disabled={false}
        onClick={[Function]}
        theme="default"
      >
        <button
          className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_left mfui-beta-pagination__button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <test-file-stub
            className="mfui-beta-pagination-navigation__icon"
          />
        </button>
      </PaginationButton>
    </PaginationNavigation>
    <PaginationButtons
      activeButton={5}
      hiddenButton="HIDDEN"
      items={
        Array [
          1,
          "HIDDEN",
          5,
          "HIDDEN",
          10,
        ]
      }
      onClick={[Function]}
      theme="default"
    >
      <div
        className="mfui-beta-pagination-buttons"
      >
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="0"
          onClick={[Function]}
          theme="default"
          value={1}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            1
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          disabled={true}
          key="1"
          theme="default"
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <test-file-stub />
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={true}
          key="2"
          onClick={[Function]}
          theme="default"
          value={5}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_active mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            5
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          disabled={true}
          key="3"
          theme="default"
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <test-file-stub />
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="4"
          onClick={[Function]}
          theme="default"
          value={10}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            10
          </button>
        </PaginationButton>
      </div>
    </PaginationButtons>
    <PaginationNavigation
      className="mfui-beta-pagination__button"
      disabled={false}
      onClick={[Function]}
      theme="default"
    >
      <PaginationButton
        className="mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_right mfui-beta-pagination__button"
        disabled={false}
        onClick={[Function]}
        theme="default"
      >
        <button
          className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_right mfui-beta-pagination__button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <test-file-stub
            className="mfui-beta-pagination-navigation__icon"
          />
        </button>
      </PaginationButton>
    </PaginationNavigation>
  </div>
</Pagination>
`;

exports[`Pagination render on mobile resolution should render component with left hidden buttons 1`] = `
<Pagination
  activePage={8}
  onChange={[MockFunction]}
  totalPages={10}
>
  <div
    className="mfui-beta-pagination"
  >
    <PaginationNavigation
      className="mfui-beta-pagination__button"
      direction="left"
      disabled={false}
      onClick={[Function]}
      theme="default"
    >
      <PaginationButton
        className="mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_left mfui-beta-pagination__button"
        disabled={false}
        onClick={[Function]}
        theme="default"
      >
        <button
          className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_left mfui-beta-pagination__button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <test-file-stub
            className="mfui-beta-pagination-navigation__icon"
          />
        </button>
      </PaginationButton>
    </PaginationNavigation>
    <PaginationButtons
      activeButton={8}
      hiddenButton="HIDDEN"
      items={
        Array [
          1,
          "HIDDEN",
          8,
          9,
          10,
        ]
      }
      onClick={[Function]}
      theme="default"
    >
      <div
        className="mfui-beta-pagination-buttons"
      >
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="0"
          onClick={[Function]}
          theme="default"
          value={1}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            1
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          disabled={true}
          key="1"
          theme="default"
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <test-file-stub />
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={true}
          key="2"
          onClick={[Function]}
          theme="default"
          value={8}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_active mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            8
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="3"
          onClick={[Function]}
          theme="default"
          value={9}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            9
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="4"
          onClick={[Function]}
          theme="default"
          value={10}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            10
          </button>
        </PaginationButton>
      </div>
    </PaginationButtons>
    <PaginationNavigation
      className="mfui-beta-pagination__button"
      disabled={false}
      onClick={[Function]}
      theme="default"
    >
      <PaginationButton
        className="mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_right mfui-beta-pagination__button"
        disabled={false}
        onClick={[Function]}
        theme="default"
      >
        <button
          className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_right mfui-beta-pagination__button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <test-file-stub
            className="mfui-beta-pagination-navigation__icon"
          />
        </button>
      </PaginationButton>
    </PaginationNavigation>
  </div>
</Pagination>
`;

exports[`Pagination render on mobile resolution should render component with right hidden buttons 1`] = `
<Pagination
  activePage={1}
  onChange={[MockFunction]}
  totalPages={10}
>
  <div
    className="mfui-beta-pagination"
  >
    <PaginationNavigation
      className="mfui-beta-pagination__button"
      direction="left"
      disabled={true}
      onClick={[Function]}
      theme="default"
    >
      <PaginationButton
        className="mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_left mfui-beta-pagination__button"
        disabled={true}
        onClick={[Function]}
        theme="default"
      >
        <button
          className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_left mfui-beta-pagination__button"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <test-file-stub
            className="mfui-beta-pagination-navigation__icon"
          />
        </button>
      </PaginationButton>
    </PaginationNavigation>
    <PaginationButtons
      activeButton={1}
      hiddenButton="HIDDEN"
      items={
        Array [
          1,
          2,
          3,
          "HIDDEN",
          10,
        ]
      }
      onClick={[Function]}
      theme="default"
    >
      <div
        className="mfui-beta-pagination-buttons"
      >
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={true}
          key="0"
          onClick={[Function]}
          theme="default"
          value={1}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_active mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            1
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="1"
          onClick={[Function]}
          theme="default"
          value={2}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            2
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="2"
          onClick={[Function]}
          theme="default"
          value={3}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            3
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          disabled={true}
          key="3"
          theme="default"
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <test-file-stub />
          </button>
        </PaginationButton>
        <PaginationButton
          className="mfui-beta-pagination-buttons__button"
          isActive={false}
          key="4"
          onClick={[Function]}
          theme="default"
          value={10}
        >
          <button
            className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-buttons__button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            10
          </button>
        </PaginationButton>
      </div>
    </PaginationButtons>
    <PaginationNavigation
      className="mfui-beta-pagination__button"
      disabled={false}
      onClick={[Function]}
      theme="default"
    >
      <PaginationButton
        className="mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_right mfui-beta-pagination__button"
        disabled={false}
        onClick={[Function]}
        theme="default"
      >
        <button
          className="mfui-beta-pagination-button mfui-beta-pagination-button_theme_default mfui-beta-pagination-navigation mfui-beta-pagination-navigation_direction_right mfui-beta-pagination__button"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <test-file-stub
            className="mfui-beta-pagination-navigation__icon"
          />
        </button>
      </PaginationButton>
    </PaginationNavigation>
  </div>
</Pagination>
`;

exports[`Pagination should render component with left and right hidden buttons 1`] = `
<div
  className="mfui-beta-pagination"
>
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    direction="left"
    disabled={false}
    onClick={[Function]}
    theme="default"
  />
  <PaginationButtons
    activeButton={5}
    hiddenButton="HIDDEN"
    items={
      Array [
        1,
        "HIDDEN",
        4,
        5,
        6,
        "HIDDEN",
        10,
      ]
    }
    onClick={[Function]}
    theme="default"
  />
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    disabled={false}
    onClick={[Function]}
    theme="default"
  />
</div>
`;

exports[`Pagination should render component with left hidden buttons 1`] = `
<div
  className="mfui-beta-pagination"
>
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    direction="left"
    disabled={false}
    onClick={[Function]}
    theme="default"
  />
  <PaginationButtons
    activeButton={8}
    hiddenButton="HIDDEN"
    items={
      Array [
        1,
        "HIDDEN",
        6,
        7,
        8,
        9,
        10,
      ]
    }
    onClick={[Function]}
    theme="default"
  />
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    disabled={false}
    onClick={[Function]}
    theme="default"
  />
</div>
`;

exports[`Pagination should render component with number of buttons does not exceed the limit 1`] = `
<div
  className="mfui-beta-pagination"
>
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    direction="left"
    disabled={true}
    onClick={[Function]}
    theme="default"
  />
  <PaginationButtons
    activeButton={1}
    hiddenButton="HIDDEN"
    items={
      Array [
        1,
        2,
        3,
      ]
    }
    onClick={[Function]}
    theme="default"
  />
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    disabled={false}
    onClick={[Function]}
    theme="default"
  />
</div>
`;

exports[`Pagination should render component with right hidden buttons 1`] = `
<div
  className="mfui-beta-pagination"
>
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    direction="left"
    disabled={true}
    onClick={[Function]}
    theme="default"
  />
  <PaginationButtons
    activeButton={1}
    hiddenButton="HIDDEN"
    items={
      Array [
        1,
        2,
        3,
        4,
        5,
        "HIDDEN",
        10,
      ]
    }
    onClick={[Function]}
    theme="default"
  />
  <PaginationNavigation
    className="mfui-beta-pagination__button"
    disabled={false}
    onClick={[Function]}
    theme="default"
  />
</div>
`;
